[project]
name = "dplutils"
dynamic = ["version"]
authors = [
    {name = "Scientifc Software Engineering Center at JHU", email = "ssec@jhu.edu"},
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.10,<3.12"  # prob can relax the lower limit...
dependencies = [
    "pandas<2.2",  # due to ray, track at: https://github.com/ray-project/ray/issues/42842
    "numpy",
    "ray[data]",
    "pyarrow",
    "networkx",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7",
    "build",
    "pytest",
    "pytest-cov",
    "ruff",
    "tox"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_book_theme",
    "sphinx-automodapi",
    "sphinx-issues",
    "nbsphinx"
]

[project.urls]
homepage = "https://dplutils.readthedocs.io/en/latest"
documentation = "https://dplutils.readthedocs.io/en/latest"
repository = "https://github.com/ssec-jhu/dplutils"

[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dplutils"]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "dplutils/_version.py"

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "node_modules",
    "venv",
]

lint.ignore = [
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
]

target-version = "py311"

[tool.ruff.lint.pydocstyle] # https://docs.astral.sh/ruff/settings/#lint_pydocstyle_convention
convention = "google"
